perf(engine) #5588: lay the vector location index out in primitive arrays (~90 -> ~32 bytes per live vector) (#5861)
* perf(engine) #5588: lay the vector location index out in primitive arrays

VectorLocationIndex held one boxed entry per live vector in a
ConcurrentHashMap<Integer, VectorLocation> plus a ConcurrentHashMap<RID,
int[]> reverse index, retaining ~90 bytes per live vector to carry ~20
bytes of payload. Vector ids are dense and monotonically assigned, so
they address arrays directly.

The mapping is now four primitive arrays indexed by vector id - the file
offset with its compacted flag packed into one long, the RID's bucket id
and position, and one presence bit - at ~21 bytes per id plus 8 to 16
bytes per live vector for the reverse index. A 10M-vector index goes
from ~900MB to ~320MB with no per-entry objects at all.

The arrays are CHUNKED (128 ids) and a chunk is released as soon as its
last live id is tombstoned. That is not an optimisation: it is what
preserves the property #5516 exists for, that residency follows the live
vectors and not the ids handed out. A re-embedding workload hands out
9.3M ids for a 4K live set, and a flat id-indexed array would retain
~190MB where the map it replaces retained ~360KB.

Publication is by release/acquire on the array element itself, at both
levels - the chunk directory slot and the presence word - because a
plain element store into an already-published array carries no
happens-before edge for a reader that read the enclosing field earlier.
Three orderings are load-bearing and documented where they live:

- the offset and its compacted flag share one 64-bit word, so they can
  never be read from two generations. applyReplicatedPageUpdate
  re-points a live id at the compacted file on a replica with no index
  lock held, and a misaligned page read parses into a well-formed vector
  that passes every guard;
- a chunk is dropped only after its bits are cleared, asserted, or a
  reader holding the stale reference re